# docs

./: README.md
02.paper/04.我的专利/参考专利/: 专利1-埃克斯工业有限公司-IP240205-一种基于巨型水轮机组的数据处理方法及系统-新申请文档--初稿V3.docx  专利2-埃克斯工业有限公司-IP240206-一种基于水电机组的风险预测方法及系统-新申请文档-初稿V5.docx
03.note/知识拓展/: 数据分析方法.ipynb
04.course/ChatGLM大模型/: 必看1：不能访问huggingface解决方法+(1).docx  第10章 给梦想插上飞翔的翅膀：会使用工具的ChatGLM3.pptx  第11章 基于自然语言的中国上市公司大规模年度财务报表非结构化信息抽取实战.pptx  第12章 基于自然语言的中国上市公司财务报表智能问答与财务预警实战.pptx  第1章 大模型时代的开端.pptx  第2章 Pytorch2.0深度学习环境搭建.pptx  第3章 初识ChatGLM3：专业客服机器人搭建.pptx  第4章 ChatGLM3进阶：基于知识链的检索增强生成.pptx  第5章 基于私有云的ChatGLM3部署和使用实战.pptx  第6章 大模型核心-注意力机制详解.pptx  第7章 国产之光：最强大模型GLM源码分析与文本生成实战.pptx  第8章 基于人类反馈强化学习的GLM模型微调实战（选学内容） .pptx  第9章 更快更准地聚焦任务：低资源单GPU微调ChatGLM3实战.pptx
04.course/PyTorch深度学习实战/p1ch5/: 2_autograd.ipynb
04.course/PyTorch深度学习实战/p1ch7/: 1_datasets.ipynb
3.others/1.job/简历/: 曹宇宇简历_2022.docx
others/: tips.md
others/job/: 曹宇宇简历_2023.docx
others/work/: 基于MindSpore的深度学习工具箱开发-概要方案.docx  基于模型降阶的三维模型与一维模型融合建模技术研究报告.docx
others/work/tongyuan/knn/: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
others/work/tongyuan/knn/knn/: __init__.py  knn_cyy.py
others/work/tongyuan/knn/tests/: test_knn.py
others/技术路线图/: MWORKS DeepLearning Tool Box技术路线.xmind  产品总体方案.vsdx  机理数据融合.drawio  深度学习工具箱 2023年规划 V2-提纲 (2).pptx
paper/剩余寿命预测/: 基于机器学习的设备剩余寿命预测方法综述_裴洪.caj
work/: 机器学习工具箱开发-详细方案设计.docx
work/技术路线图/: GPU加速.drawio  代码生成.drawio  基于Syslab和Sysplorer的机理数据融合仿真建模实现(CPU).drawio  应用流程.drawio  底层框架可扩展.drawio
笔记/: 英文专业词汇学习.txt
笔记/操作系统/: 知识点整理.md
论文/剩余寿命预测/: 基于机器学习的航空发动机剩余寿命预测综述_刘国建.caj
(+1405 files in other folders)
