[tool.poetry]
name = "knn"
version = "0.1.0"
description = ""
authors = ["caoyuyu <caoyuyu@tongyuan.cc>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
pytest = "^7.3.1"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"


[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
